--- a/java-sample/build.gradle
+++ b/java-sample/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.10"
 }
 
 test {
